--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h2>I'm a Web developer</h2>
     <hr />
     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <img src="./assets/images/movieranking.png/" height="200" alt="movie ranking project preview"/>
+    <img src="./assets/images/movieranking.png" height="200" alt="movie ranking project preview"/>
     <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/birthdaypic.png/" height="200" alt="brithday invie project preview"/>
+    <img src="./assets/images/birthdaypic.png" height="200" alt="brithday invie project preview"/>
     <p><a href="./public/about.html">About Me</a>
        <a href="./public/contact.html">Contact Me</a></p>
 </body>
